--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
-<html>
-  <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Halaman Sederhana</title>
+</head>
+<body>
+
+    <header>
+        <h1>Selamat Datang di Halaman Sederhana!</h1>
+    </header>
+
+    <section>
+        <p>Ini adalah contoh halaman HTML sederhana. Silakan modifikasi sesuai kebutuhan Anda.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 Halaman Sederhana. All rights reserved.</p>
+    </footer>
+
+</body>
 </html>
