--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
 
     <header>
-        <h1>Selamat Datang di Halaman Sederhana!</h1>
+        <h1>Adam Gumilang</h1>
     </header>
 
     <section>
-        <p>Ini adalah contoh halaman HTML sederhana. Silakan modifikasi sesuai kebutuhan Anda.</p>
+        <p>Nama saya Adam Gumilang</p>
     </section>
 
     <footer>
-        <p>&copy; 2023 Halaman Sederhana. All rights reserved.</p>
+        <p>&copy; 2023 Adam Gumilang. All rights reserved.</p>
     </footer>
 
 </body>
